wip(server): add support for null result values